force-app/main/default/objects/Transfers__c/Transfers__c.object-meta.xml
<CustomObject>
    <description>PBI: 225352
Used to record Places: Transfer under S16-13 and S16-1</description>
    <label>Transfer Event History</label>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Event History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>