force-app/main/default/objects/Transfers__c/fields/Acknowledge_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_Transfer__c</fullName>
    <label>Acknowledge Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S16-13 Provisional Places Transfer</fullName>
            </value>
            <value>
                <fullName>S16-1 Places Taken Effect Transfer</fullName>
            </value>
            <value>
                <fullName>Both Transfers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>