force-app/main/default/objects/Transfers__c/fields/Approved_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Transfer_Date__c</fullName>
    <label>Approved Transfer Date</label>
    <type>Date</type>
</CustomField>