force-app/main/default/objects/Transfers__c/fields/Date_of_Advice_from_Provider__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Advice_from_Provider__c</fullName>
    <label>Date of Advice from Provider</label>
    <type>Date</type>
</CustomField>