force-app/main/default/objects/Transfers__c/fields/Date_of_Notice_to_Resolve_received__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Notice_to_Resolve_received__c</fullName>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <label>Date of Notice to Resolve received</label>
    <type>Date</type>
</CustomField>