force-app/main/default/objects/Transfers__c/fields/Date_of_Notification_by_Provider__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Notification_by_Provider__c</fullName>
    <label>Date of Notification by Provider</label>
    <type>Date</type>
</CustomField>