force-app/main/default/objects/Transfers__c/fields/Date_of_Receipt_of_Further_Information__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Receipt_of_Further_Information__c</fullName>
    <label>Date of Receipt of Further Information</label>
    <type>Date</type>
</CustomField>