force-app/main/default/objects/Transfers__c/fields/Date_of_request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_request__c</fullName>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <label>Date of request</label>
    <type>Date</type>
</CustomField>