force-app/main/default/objects/Transfers__c/fields/Date_required__c.field-meta.xml
<CustomField>
    <fullName>Date_required__c</fullName>
    <defaultValue>TODAY() + 28</defaultValue>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>