force-app/main/default/objects/Transfers__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision by Provider not to Activate</fullName>
            </value>
            <value>
                <fullName>Uphold Decision</fullName>
            </value>
            <value>
                <fullName>Set Aside Decision and Substitute New Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>