force-app/main/default/objects/Transfers__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>