force-app/main/default/objects/Transfers__c/fields/Decision_to_Veto__c.field-meta.xml
<CustomField>
    <fullName>Decision_to_Veto__c</fullName>
    <label>Decision to Veto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S16-13 Provisional Places Transfer</fullName>
            </value>
            <value>
                <fullName>S16-1 Places Taken Effect Transfer</fullName>
            </value>
            <value>
                <fullName>Both Transfers</fullName>
            </value>
            <value>
                <fullName>To be clear on the decision made</fullName>
                <isActive>false</isActive>
                <label>To be clear on the decision made</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>