force-app/main/default/objects/Transfers__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <label>Delegate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transfer_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>