force-app/main/default/objects/Transfers__c/fields/Delegate_Name__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Name__c</fullName>
    <label>Delegate Name</label>
    <type>TextArea</type>
</CustomField>