force-app/main/default/objects/Transfers__c/fields/Delegate_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Name_Old__c</fullName>
    <label>Delegate Name.old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>