force-app/main/default/objects/Transfers__c/fields/Delegate_Position_old__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Position_old__c</fullName>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <formula>Delegate__r.UserRole.Name</formula>
    <label>Delegate Position.old</label>
    <type>Text</type>
</CustomField>