force-app/main/default/objects/Transfers__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>PBI: 231169:
Places: Transfer under S16-13 and S16-1</description>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event__c.Event_Type__c</field>
            <operation>equals</operation>
            <value>Transfer - S16-13/S16-1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Transfer_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>