force-app/main/default/objects/Transfers__c/fields/Is_Acting_in_position__c.field-meta.xml
<CustomField>
    <fullName>Is_Acting_in_position__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <label>Check box if Acting</label>
    <type>Checkbox</type>
</CustomField>