force-app/main/default/objects/Transfers__c/fields/Legacy_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created_By__c</fullName>
    <description>Legacy created by field.</description>
    <label>Legacy Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>