force-app/main/default/objects/Transfers__c/fields/Legacy_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Modified_By__c</fullName>
    <description>Legacy modified by field.</description>
    <label>Legacy Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>