force-app/main/default/objects/Transfers__c/fields/Legacy_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Modified_Date__c</fullName>
    <description>Legacy modified date field.</description>
    <label>Legacy Modified Date</label>
    <type>DateTime</type>
</CustomField>