force-app/main/default/objects/Transfers__c/fields/Previous_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Transfer_Date__c</fullName>
    <description>Previous Transfer Date</description>
    <label>Previous Transfer Date</label>
    <type>Date</type>
</CustomField>