force-app/main/default/objects/Transfers__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconsideration initiated by Secretary (S85-4)</fullName>
            </value>
            <value>
                <fullName>Reconsideration requested by affected person (S85-5)</fullName>
            </value>
            <value>
                <fullName>Request for Reconsideration by the Administrative Appeals Tribunal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>