force-app/main/default/objects/Transfers__c/fields/Summary_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Request__c</fullName>
    <description>Places: Transfer under S16-13 and S16-1</description>
    <label>Summary of Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>