force-app/main/default/objects/Transfers__c/fields/Transfer_Date_being_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date_being_Acknowledged__c</fullName>
    <label>Transfer Date being Acknowledged</label>
    <type>Date</type>
</CustomField>