force-app/main/default/objects/Transfers__c/fields/Transfer_Date_being_Vetoed__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date_being_Vetoed__c</fullName>
    <label>Transfer Date being Vetoed</label>
    <type>Date</type>
</CustomField>