force-app/main/default/objects/Transfers__c/fields/Transfer_Day_Sought__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Day_Sought__c</fullName>
    <description>Transfer Day Sought</description>
    <label>Transfer Day Sought</label>
    <type>Date</type>
</CustomField>