force-app/main/default/objects/Transfers__c/recordTypes/Acknowledge_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Acknowledge_Transfer</fullName>
    <active>true</active>
    <label>Acknowledge Transfer</label>
</RecordType>