force-app/main/default/objects/Transfers__c/recordTypes/Activate.recordType-meta.xml
<RecordType>
    <fullName>Activate</fullName>
    <active>true</active>
    <label>Activate</label>
</RecordType>