force-app/main/default/objects/Transfers__c/recordTypes/Cancel_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Cancel_Transfer</fullName>
    <active>true</active>
    <label>Cancel</label>
</RecordType>