force-app/main/default/objects/Transfers__c/recordTypes/Change_Transfer_Date.recordType-meta.xml
<RecordType>
    <fullName>Change_Transfer_Date</fullName>
    <active>true</active>
    <label>Change Transfer Date</label>
</RecordType>