force-app/main/default/objects/Transfers__c/recordTypes/Correct_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Correct_Transfer</fullName>
    <active>true</active>
    <label>Correct</label>
</RecordType>