force-app/main/default/objects/Transfers__c/recordTypes/Record_a_Decision_on_Request_for_Reconsideration_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Record_a_Decision_on_Request_for_Reconsideration_Transfer</fullName>
    <active>true</active>
    <label>Record a Decision on Request for Reconsideration</label>
</RecordType>