force-app/main/default/objects/Transfers__c/recordTypes/Record_AAT_Decision_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Record_AAT_Decision_Transfer</fullName>
    <active>true</active>
    <label>Record AAT Decision</label>
</RecordType>