force-app/main/default/objects/Transfers__c/recordTypes/Record_Decision_to_Veto.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_to_Veto</fullName>
    <active>true</active>
    <label>Record Decision to Veto</label>
</RecordType>