force-app/main/default/objects/Transfers__c/recordTypes/Record_Notice_to_Resolve.recordType-meta.xml
<RecordType>
    <fullName>Record_Notice_to_Resolve</fullName>
    <active>true</active>
    <label>Record Notice to Resolve</label>
</RecordType>