force-app/main/default/objects/Transfers__c/recordTypes/Record_Receipt_of_Further_Information.recordType-meta.xml
<RecordType>
    <fullName>Record_Receipt_of_Further_Information</fullName>
    <active>true</active>
    <label>Record Receipt of Further Information</label>
</RecordType>