force-app/main/default/objects/Transfers__c/recordTypes/Record_Receipt_of_Response_to_Notice_to_Resolve.recordType-meta.xml
<RecordType>
    <fullName>Record_Receipt_of_Response_to_Notice_to_Resolve</fullName>
    <active>true</active>
    <label>Record Receipt of Response to Notice to Resolve</label>
</RecordType>