force-app/main/default/objects/Transfers__c/recordTypes/Record_Request_for_Reconsideration.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration</label>
</RecordType>