force-app/main/default/objects/Transfers__c/recordTypes/Record_Request_for_Reconsideration_by_AAT.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_by_AAT</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration by AAT</label>
</RecordType>