force-app/main/default/objects/Transfers__c/recordTypes/Withdraw_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Withdraw_Transfer</fullName>
    <active>true</active>
    <label>Withdraw</label>
</RecordType>