force-app/main/default/objects/Transfers__c/validationRules/TH_ServiceCombineLock.validationRule-meta.xml
<ValidationRule>
    <fullName>TH_ServiceCombineLock</fullName>
    <active>true</active>
    <description>This used to lock the record during the service combine process.</description>
    <errorConditionFormula>Event__r.Service__r.GPMS_CombineLock__c</errorConditionFormula>
    <errorMessage>This service is being combined. Related records cannot be changed.</errorMessage>
</ValidationRule>